[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rao_keyvalue_property_mixin_classes"
version = "0.1.0"
description = "Basic classes with properties reflecting how different Radio-Astronomy Observatories store common keyed-value metadata."
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
